INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (${FLTK_INCLUDE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include /usr/include/pgsql /usr/include/pgsql/libpq)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})
LINK_DIRECTORIES (${FLTK_LIB_DIR})

LINK_LIBRARIES (sputil5 ${ODBC_LIBRARY} ${SQLITE3_LIBRARY} ${POSTGRESQL_LIBRARY} ${SOCKET_LIBRARY} pthread rt)

IF (POSTGRESQL_FLAG)
  ADD_EXECUTABLE (postgresql_test postgresql_test.cpp)
  TARGET_LINK_LIBRARIES (postgresql_test sputil5 spdb5)
  ADD_EXECUTABLE (postgresql_test2 postgresql_test2.cpp)
  TARGET_LINK_LIBRARIES (postgresql_test2 sputil5 spdb5)
ENDIF (POSTGRESQL_FLAG)
  
IF (SQLITE3_LIBRARY)
  ADD_EXECUTABLE (sqlite3_test sqlite3_test.cpp)
  IF (WIN32)
    SET_TARGET_PROPERTIES (sqlite3_test PROPERTIES LINK_FLAGS "-mconsole -mno-cygwin")
  ENDIF (WIN32)
  TARGET_LINK_LIBRARIES (sqlite3_test sputil5 spdb5 ${SQLITE3_LIBRARY})

  INSTALL(TARGETS sqlite3_test
    RUNTIME DESTINATION share/sptk/bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
  )
ENDIF (SQLITE3_LIBRARY)
  
IF (ODBC_LIBRARY)
  SET (ODBC_TESTS odbc_test odbc_test2 odbc_test3)
  LINK_LIBRARIES (spdb5)
  FOREACH (ODBC_TEST ${ODBC_TESTS})
    ADD_EXECUTABLE (${ODBC_TEST} ${ODBC_TEST}.cpp)
    TARGET_LINK_LIBRARIES (${ODBC_TEST} sputil5 spdb5 ${ODBC_LIBRARY})
    IF (WIN32)
      SET_TARGET_PROPERTIES (${ODBC_TEST} PROPERTIES LINK_FLAGS "-mconsole -mno-cygwin")
    ENDIF (WIN32)
  ENDFOREACH (ODBC_TEST)
  
  INSTALL(TARGETS ${ODBC_TESTS}
    RUNTIME DESTINATION share/sptk/bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
  )
ENDIF (ODBC_LIBRARY)
