SET (DATASOURCE_EXAMPLE directory_ds imap_ds)

FOREACH (DS_TEST ${DATASOURCE_EXAMPLE})
    ADD_EXECUTABLE (${DS_TEST} ${DS_TEST}.cpp)
    TARGET_LINK_LIBRARIES (${DS_TEST} sputil5)
    IF (WIN32)
      SET_TARGET_PROPERTIES (${DS_TEST} PROPERTIES LINK_FLAGS "-mconsole -mno-cygwin")
    ENDIF (WIN32)
ENDFOREACH (DS_TEST)

INSTALL(TARGETS ${DATASOURCE_EXAMPLE}
    RUNTIME DESTINATION share/sptk5/bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)
