INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (${FLTK_INCLUDE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include /usr/include/pgsql /usr/include/pgsql/libpq)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})
LINK_DIRECTORIES (${FLTK_LIB_DIR})

IF (FLTK_FLAG)

    LINK_LIBRARIES (sputil5 sptk5 spdb5 ${ODBC_LIBRARY} ${SQLITE3_LIBRARY} ${POSTGRESQL_LIBRARY} ${SOCKET_LIBRARY} ${FLTK_LIBRARIES} ${ASPELL_LIBRARIES} pthread)

    SET (DATASOURCE_EXAMPLE directory_ds imap_ds)

    FOREACH (DS_TEST ${DATASOURCE_EXAMPLE})
        ADD_EXECUTABLE (${DS_TEST} ${DS_TEST}.cpp)
        TARGET_LINK_LIBRARIES (${DS_TEST} sputil5)
        IF (WIN32)
            SET_TARGET_PROPERTIES (${DS_TEST} PROPERTIES LINK_FLAGS "-mconsole -mno-cygwin")
        ENDIF (WIN32)
    ENDFOREACH (DS_TEST)

    INSTALL(TARGETS ${DATASOURCE_EXAMPLE}
        RUNTIME DESTINATION share/sptk5/bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
    )

ENDIF (FLTK_FLAG)
