INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})

SET (JWT_TESTS jwt_test)

LINK_LIBRARIES (sputil5 spjwt)

IF (UNIX)
    LINK_LIBRARIES (pthread rt)
ENDIF (UNIX)

FOREACH (JWT_TEST ${JWT_TESTS})
    ADD_EXECUTABLE (${JWT_TESTS} ${JWT_TEST}.cpp)
ENDFOREACH ()

