INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (${FLTK_INCLUDE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})
LINK_DIRECTORIES (${FLTK_LIB_DIR})

LINK_LIBRARIES (sputil5 ${ODBC_LIBRARY} ${SQLITE3_LIBRARY} ${POSTGRESQL_LIBRARY} ${SOCKET_LIBRARY} pthread)

IF (FLTK_FLAG)
  ADD_EXECUTABLE (imap_connect imap_connect.cpp)
  TARGET_LINK_LIBRARIES (imap_connect sputil5 sptk5 spdb5 ${ODBC_LIBRARY} ${SQLITE3_LIBRARY} ${POSTGRESQL_LIBRARY} ${SOCKET_LIBRARY} ${FLTK_LIBRARIES} ${ASPELL_LIBRARIES} pthread)

  ADD_EXECUTABLE (http_connect http_connect.cpp)
  TARGET_LINK_LIBRARIES (http_connect sputil5 sptk5 spdb5 ${ODBC_LIBRARY} ${SQLITE3_LIBRARY} ${POSTGRESQL_LIBRARY} ${SOCKET_LIBRARY} ${FLTK_LIBRARIES} ${ASPELL_LIBRARIES} pthread)
ENDIF (FLTK_FLAG)

ADD_EXECUTABLE (smtp_connect smtp_connect.cpp)
TARGET_LINK_LIBRARIES (smtp_connect sputil5)
