INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})

SET (NET_TESTS client_test server_test smtp_connect)

IF (FLTK_FLAG)
    INCLUDE_DIRECTORIES (${FLTK_INCLUDE_DIR})
    LINK_DIRECTORIES (${FLTK_LIB_DIR})
    SET (NET_TESTS ${NET_TESTS} imap_connect http_connect)
    LINK_LIBRARIES (sputil5 sptk5 spdb5 ${ODBC_LIBRARY} ${SQLITE3_LIBRARY} ${POSTGRESQL_LIBRARY} ${SOCKET_LIBRARY} ${FLTK_LIBRARIES} ${ASPELL_LIBRARIES} pthread)
ELSE (FLTK_FLAG)
    LINK_LIBRARIES (sputil5 ${ODBC_LIBRARY} ${SQLITE3_LIBRARY} ${POSTGRESQL_LIBRARY} ${SOCKET_LIBRARY} pthread)
ENDIF (FLTK_FLAG)

FOREACH (NET_TEST ${NET_TESTS})
    ADD_EXECUTABLE (${NET_TEST} ${NET_TEST}.cpp)
    IF (WIN32)
      SET_TARGET_PROPERTIES (${NET_TEST} PROPERTIES LINK_FLAGS "-mconsole -mno-cygwin")
    ENDIF (WIN32)
ENDFOREACH (NET_TEST)

