INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})

LINK_DIRECTORIES (${SPTK_BINARY_DIR})

SET (THREADS_TESTS semaphore thread_onexit thread_rwlock thread_test thread_pool_test)

FOREACH (THREADS_TEST ${THREADS_TESTS})

    ADD_EXECUTABLE (${THREADS_TEST} ${THREADS_TEST}.cpp)
    TARGET_LINK_LIBRARIES (${THREADS_TEST} sputil5 rt)
    IF (WIN32)
      SET_TARGET_PROPERTIES (${THREADS_TEST} PROPERTIES LINK_FLAGS "-mconsole -mno-cygwin")
    ENDIF (WIN32)

ENDFOREACH (THREADS_TEST)

INSTALL(TARGETS ${THREADS_TESTS}
    RUNTIME DESTINATION share/sptk/bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
  )

