INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include /usr/include/pgsql /usr/include/pgsql/libpq)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})
LINK_LIBRARIES (sputil5 ${ODBC_LIBRARY} ${SQLITE3_LIBRARY} ${POSTGRESQL_LIBRARY} ${SOCKET_LIBRARY} pthread rt)

SET (CONSOLE_TESTS datetime exceptions logfile_test syslog_test unique_instance registry)

FOREACH (CONSOLE_TEST ${CONSOLE_TESTS})

    ADD_EXECUTABLE (${CONSOLE_TEST} ${CONSOLE_TEST}.cpp)

    TARGET_LINK_LIBRARIES (${CONSOLE_TEST} sputil5)

    IF (WIN32)
        SET_TARGET_PROPERTIES (${CONSOLE_TEST} PROPERTIES LINK_FLAGS "-mconsole -mno-cygwin")
    ENDIF (WIN32)

ENDFOREACH (CONSOLE_TEST)

INSTALL(TARGETS ${CONSOLE_TESTS}
    RUNTIME DESTINATION share/sptk/bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)
