IF (LIBRARY_TYPE STREQUAL "SHARED")
  ADD_DEFINITIONS (-DSP_DRIVER_LIBRARY)
ENDIF(LIBRARY_TYPE STREQUAL "SHARED")

# ODBC support library
IF (ODBC_FLAG)
    ADD_LIBRARY (spdb5_odbc ${LIBRARY_TYPE} odbc/CODBC.cpp odbc/CODBCDatabase.cpp)
    TARGET_LINK_LIBRARIES(spdb5_odbc spdb5 sputil5)
    INSTALL(TARGETS spdb5_odbc RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
ENDIF (ODBC_FLAG)

# SQLite3 support library
SET (SQLITE3_SOURCES)
IF (SQLITE3_FLAG)
    ADD_LIBRARY (spdb5_sqlite3 ${LIBRARY_TYPE} SQLite3/CSQLite3Database.cpp)
    TARGET_LINK_LIBRARIES(spdb5_sqlite3 spdb5 sputil5)
    INSTALL(TARGETS spdb5_sqlite3 RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
ENDIF (SQLITE3_FLAG)

SET (POSTGRESQL_SOURCES)
IF (POSTGRESQL_FLAG)
    ADD_LIBRARY (spdb5_postgresql ${LIBRARY_TYPE}
        PostgreSQL/CPostgreSQLDatabase.cpp
        PostgreSQL/CPostgreSQLParamValues.cpp
        PostgreSQL/htonq.cpp
    )
    TARGET_LINK_LIBRARIES(spdb5_postgresql spdb5 sputil5)
    INSTALL(TARGETS spdb5_postgresql RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
ENDIF (POSTGRESQL_FLAG)

