IF (LIBRARY_TYPE STREQUAL "SHARED")
  ADD_DEFINITIONS (-DSP_LIBRARY)
ENDIF(LIBRARY_TYPE STREQUAL "SHARED")

ADD_LIBRARY (spwsdl5 ${LIBRARY_TYPE}
    CWSBasicTypes.cpp
    CWSParser.cpp
    CWSParserComplexType.cpp
    CWSRequest.cpp
    CWSRestriction.cpp
    CWSTypeTranslator.cpp
    )

TARGET_LINK_LIBRARIES(spwsdl5 sputil5)

INSTALL(TARGETS spwsdl5 RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
