INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include /usr/include/pgsql /usr/include/pgsql/libpq)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})

LINK_LIBRARIES (sputil5 ${SOCKET_LIBRARY})
IF (UNIX)
    LINK_LIBRARIES (pthread rt)
ENDIF (UNIX)

ADD_EXECUTABLE (bulk_insert_test bulk_insert_test.cpp)
TARGET_LINK_LIBRARIES (bulk_insert_test sputil5 spdb5)

IF (SQLITE3_LIBRARY)
  ADD_EXECUTABLE (sqlite3_test sqlite3_test.cpp)
  TARGET_LINK_LIBRARIES (sqlite3_test sputil5 spdb5)

  INSTALL(
    TARGETS sqlite3_test
    RUNTIME DESTINATION share/sptk5/bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
  )
  SET_TARGET_PROPERTIES(sqlite3_test PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/bin" )
ENDIF (SQLITE3_LIBRARY)

IF (ODBC_LIBRARY)
  SET (ODBC_TESTS odbc_test)
  LINK_LIBRARIES (spdb5)
  FOREACH (ODBC_TEST ${ODBC_TESTS})
    ADD_EXECUTABLE (${ODBC_TEST} ${ODBC_TEST}.cpp)
    TARGET_LINK_LIBRARIES (${ODBC_TEST} sputil5 spdb5)
    SET_TARGET_PROPERTIES(${ODBC_TEST} PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/bin" )
  ENDFOREACH (ODBC_TEST)

  INSTALL(TARGETS ${ODBC_TESTS}
    RUNTIME DESTINATION lib/sptk5/bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
  )
ENDIF (ODBC_LIBRARY)

ADD_EXECUTABLE (all_drivers_test all_drivers_test.cpp)
TARGET_LINK_LIBRARIES (all_drivers_test sputil5 spdb5)
SET_TARGET_PROPERTIES(all_drivers_test PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/bin" )
