# SPDB library

IF (LIBRARY_TYPE STREQUAL "SHARED")
    ADD_DEFINITIONS(-DSP_LIBRARY)
ENDIF (LIBRARY_TYPE STREQUAL "SHARED")

FILE(GLOB SPDB_SOURCE_FILES *.cpp)

ADD_LIBRARY(spdb5 ${LIBRARY_TYPE} ${SPDB_SOURCE_FILES} ${SPDB_INCLUDE_FILES})

SET_TARGET_PROPERTIES(spdb5 PROPERTIES SOVERSION ${SOVERSION} VERSION ${VERSION})
SET_TARGET_PROPERTIES(spdb5 PROPERTIES INSTALL_RPATH "" )

TARGET_LINK_LIBRARIES(spdb5 sputil5)

INSTALL(
    TARGETS spdb5
    RUNTIME DESTINATION bin COMPONENT db
    LIBRARY DESTINATION lib COMPONENT db
    ARCHIVE DESTINATION lib COMPONENT db)
