# spwsdl5 library

IF (LIBRARY_TYPE STREQUAL "SHARED")
    ADD_DEFINITIONS(-DSP_LIBRARY)
ENDIF (LIBRARY_TYPE STREQUAL "SHARED")

FILE(GLOB WSDL_SOURCE_FILES *.cpp protocol/*.cpp)

ADD_LIBRARY(spwsdl5 ${LIBRARY_TYPE} ${WSDL_SOURCE_FILES} ${WSDL_INCLUDE_FILES})

SET_TARGET_PROPERTIES(spwsdl5 PROPERTIES SOVERSION ${SOVERSION} VERSION ${VERSION})

IF (SET_RPATH)
    SET_TARGET_PROPERTIES(spwsdl5 PROPERTIES INSTALL_RPATH "" )
ENDIF ()

TARGET_LINK_LIBRARIES(spwsdl5 sputil5 spdb5)

INSTALL(
    TARGETS spwsdl5
    RUNTIME DESTINATION bin COMPONENT core
    LIBRARY DESTINATION lib COMPONENT core
    ARCHIVE DESTINATION lib COMPONENT core)
